# SPIS

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  orchestrator.py  schemas.py  storage.py
app/agents/: __init__.py  prompts.py
app/providers/: base.py  factory.py  openai_compatible.py
docs/: AGENT_ROLES.md  API_KEYS.md  DEPLOY_TENCENT_CVM.md  FEISHU_HERMES_INTEGRATION.md  HERMES_BRIDGE.md
hermes-skills/spis-orchestrator/: SKILL.md
scripts/: hermes_spis.py
